<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.cadastro.CadastroTipoFragment">
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text_procuropor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_procuropor"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_vagas"
        style="@style/Button_Cadastro"
        android:text="@string/text_vagas"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/text_procuropor"
        app:layout_constraintEnd_toStartOf="@id/bt_candidatos" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_candidatos"
        style="@style/Button_Cadastro"
        android:text="@string/text_candidatos"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintStart_toEndOf="@id/bt_vagas"
        app:layout_constraintTop_toBottomOf="@id/text_procuropor" />
</androidx.constraintlayout.widget.ConstraintLayout>