<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="409dp"
            android:layout_height="245dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/text_facalogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_facalogin"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/containerComponents" />
        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:drawableRight="@drawable/ic_user"
            android:autofillHints="E-mail"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="75dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/text_facalogin" />
        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:hint="@string/prompt_password"
            android:drawableRight="@drawable/ic_eye"
            android:inputType="textPassword"
            android:layout_marginTop="25dp"
            android:autofillHints="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />
        <TextView
            android:id="@+id/text_tela_esqueceusenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_esqueceusenha"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/edit_senha" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btEntrar"
            style="@style/Button"
            android:layout_marginTop="25dp"
            android:text="@string/entrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_tela_esqueceusenha" />
        <TextView
            android:id="@+id/textTelaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cadastro"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_senha"
            app:layout_constraintStart_toStartOf="@+id/edit_senha"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>