<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.resetpassword.ForgotPasswordActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="407dp"
            android:layout_height="241dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:id="@+id/containerComponents"
            style="@style/ContainerComponents"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/text_resetSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_resetsenha"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/containerComponents" />
        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:drawableRight="@drawable/ic_user"
            android:autofillHints="E-mail"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="75dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintTop_toTopOf="@id/text_resetSenha" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btResetar"
            style="@style/Button"
            android:layout_marginTop="25dp"
            android:text="@string/resetar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_email" />
        <TextView
            android:id="@+id/textTelaLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_facalogin"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>